--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
-	transition: all 1s;
+	transition: all 0.5s;
 }
 
 :root{
@@ -15,11 +15,14 @@
 }
 
 body{
-	width: 100vw;
+	width: 100%;
 	font-family: 'Poppins', sans-serif;
 }
 
 header{
+	position: sticky;
+	z-index: 2;
+	background-color: white;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -42,7 +45,30 @@ nav, nav2{
 	display: none;
 }
 
-#latte, #uber, #card, #black{
+nav{
+	display: block;
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	background-color: white;
+	width: 80%;
+	padding: 6rem 1rem;
+}
+
+nav>div>*{
+	margin-bottom: 2rem;
+}
+
+nav>div>div{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+}
+
+#latte, #uber, #card, #black, #note{
 	margin-top: 30px;
 }
 
@@ -51,7 +77,7 @@ nav, nav2{
 	color: white;
 }
 
-.text-area{
+.text-area, #note{
 	padding: 1.3rem 1.1rem 2rem;
 	display: flex;
 	flex-direction: column;
@@ -113,16 +139,109 @@ nav, nav2{
 	font-size: 1.23rem;
 }
 
-#cta>p{
+#cta>p, #bta>p{
 	margin: 1.7rem 0;
 	font-size: 0.92rem;
 	line-height: 1.75rem;
 }
 
-.text-area>*{
+#bta>*{
 	color: var(--black);
 }
 
-.text-area>a{
+#bta>a{
 	border-color: var(--black);
+}
+
+#note{
+	margin-top: 2.5rem;
+	font-size: 0.78rem;
+	line-height: 1.5rem;
+	border-bottom: 2px solid hsl(0, 0%, 88%);
+}
+
+.links{
+	text-decoration: none;
+	color: var(--black);
+}
+
+.hidden-div{
+	display: none;
+	/*display: flex;*/
+	flex-direction: column;
+	align-items: flex-start;
+}
+
+.hidden-div>a{
+	color: gray;
+	font-size: 0.9rem;
+	margin-top: 1.4rem;
+}
+
+.hidden-div>a:hover{
+	color: black;
+}
+
+.hidden-div a:nth-child(1){
+	margin-top: 0.5rem;
+}
+
+.above-footer, footer{
+	margin: 1.4rem 1.2rem;
+	padding-bottom: 1rem;
+	border-bottom: 2px solid hsl(0, 0%, 88%);
+}
+
+.dropdown-divs{
+	display: flex;
+	padding: 0.6rem 0;
+	margin: 0.7rem 0;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	/*outline: 1px solid tomato;*/
+	cursor: pointer;
+}
+
+.toggle{
+	font-size: 1.5rem;
+	padding: 0.5rem;
+	border-radius: 50%;
+}
+
+.toggle:hover{
+	background-color: hsl(0, 0%, 90%);
+	cursor: pointer;
+}
+
+
+footer{
+	margin-top: 2.2rem;
+	border: none;
+}
+
+[alt="spotify logo"]{
+	width: 1.8rem;
+}
+
+[name^="logo-"]{
+	font-size: 1.9rem;
+	margin-left: 0.25rem;
+}
+
+#sfd{
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	font-size: 0.9rem;
+	margin: 1.7rem 0 1.1rem;
+}
+
+#sfd .links{
+	margin-bottom: 1rem;
+}
+
+footer>p{
+	font-size: 0.8rem;
+	color: hsl(0, 0%, 50%);
 }
