Fixed navigation for mobile.

--- a/styles.css
+++ b/styles.css
@@ -14,13 +14,9 @@
 	--black: #000;
 }
 
-body, #container{
+body{
 	width: 100%;
 	font-family: 'Poppins', sans-serif;
-}
-
-#container{
-	overflow-y: visible;
 }
 
 header{
@@ -52,6 +48,11 @@ header>ion-icon{
 
 #logo{
 	width: 40px;
+}
+
+#main{
+	padding-top: 30px;
+	background-color: white;
 }
 
 nav, nav2{
@@ -170,6 +171,7 @@ nav ion-icon, nav2 ion-icon{
 #latte{
 	background-color: var(--darkgreen);
 	color: white;
+	margin-top: 0;
 }
 
 .text-area, #note{
