Made adjustment to the styles.

--- a/styles.css
+++ b/styles.css
@@ -20,16 +20,17 @@ body{
 }
 
 #line{	
-	border-top: 0.5px solid var(--black);
-	position: sticky;
+	border-top: 1px solid hsl(0, 0%, 65%);
+	position: fixed;
 	top: 0;
 	left: 0;
 	right: 0;
+	z-index: 3;
 }
 
 header{
 	position: sticky;
-	z-index: 3;
+	z-index: 2;
 	background-color: white;
 	padding: 16px 25px 9px 16px;
 	box-shadow: 0px 5px 5px -5px rgba(0,0,0,0.25);
@@ -74,7 +75,7 @@ header{
 nav, nav2{
 	display: block;
 	position: fixed;
-	z-index: 2;
+	z-index: 1;
 	top: 72px;
 	right: 0;
 	bottom: 0;
